new 3-team images

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="heading-title text-center">
                             <h3 class="text-uppercase">Projektowanie to dialog</h3>
                             <p class="half-txt p-top-30">Jako magister inżynier kierunku Architektura na Politechnice Warszawskiej wiem jak projektować budynki. Dzięki doświadczeniu jako architekt wnętrz wiem jak projektować pomieszczenia. Ale przede wszystkim wiem, że w każdym projekcie
-                                najważniejszy jest człowiek który w tym co zaprojektuję będzie mieszkał i pracował.</p>
+                            najważniejsze jest [nie mam pojęcia co, blurb do uzupełnienia].</p>
                         </div>
 
                         <div class="col-md-4">
@@ -195,7 +195,7 @@
                         <div class="col-md-4">
                             <div class="team-member wow fadeInLeft">
                                 <div class="team-img">
-                                    <img src="assets/img/architect-portrait-1.jpg" alt="">
+                                    <img src="assets/img/warch-1.jpg" alt="">
                                     <div class="team-intro light-txt">
                                         <h5>Wykształcenie</h5>
                                         <span>mgr inż. arch.</span>
@@ -204,7 +204,7 @@
                                 <div class="team-hover">
                                     <div class="desk">
                                         <h4>mgr inż. arch.</h4>
-                                        <p>Wydział Architektury Politechniki Warszawskiej.</p>
+                                        <p>Wydział Architektury Politechniki Warszawskiej. [Tu może zdjęcie tablicy na budynku wydziału?]</p>
                                     </div>
                                 </div>
                             </div>
@@ -212,7 +212,7 @@
                         <div class="col-md-4">
                             <div class="team-member wow fadeInUp">
                                 <div class="team-img">
-                                    <img src="assets/img/architect-portrait-2.jpg" alt="">
+                                    <img src="assets/img/marta-sowa-1.jpg" alt="">
                                     <div class="team-intro light-txt">
                                         <h5>Doświadczenie</h5>
                                         <span>10 lat</span>
@@ -221,7 +221,7 @@
                                 <div class="team-hover">
                                     <div class="desk">
                                         <h4>...</h4>
-                                        <p>Zawodowo projektowaniem budynków i wnętrz zajmuję się od 2007 roku.</p>
+                                        <p>Zawodowo projektowaniem budynków i wnętrz zajmuję się od 2007 roku. [Może zdjęcie zapełnionego kalendarza? Tortu ze świeczkami?]</p>
                                     </div>
                                 </div>
                             </div>
@@ -229,7 +229,7 @@
                         <div class="col-md-4">
                             <div class="team-member wow fadeInRight">
                                 <div class="team-img">
-                                    <img src="assets/img/architect-portrait-3.jpg" alt="">
+                                    <img src="assets/img/construction-workers-1.jpg" alt="">
                                     <div class="team-intro light-txt">
                                         <h5>Wykonawcy</h5>
                                         <span>...</span>
@@ -238,7 +238,7 @@
                                 <div class="team-hover">
                                     <div class="desk">
                                         <h4>...</h4>
-                                        <p>Współpracuję z solidnymi wykonawcami ze wszystkich branż...</p>
+                                        <p>Współpracuję z solidnymi wykonawcami ze wszystkich branż... [Tu zdjęcie jakiejś pracy grupowej może?]</p>
                                     </div>
                                 </div>
                             </div>
@@ -523,50 +523,6 @@
             <!--services-->
 
 
-            <!--fun factor-->
-            <div class="fun-factor-parallax dark page-content parallax-7">
-                <div class="container p-tb-100">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="fun-factor">
-                                <div class="icon">
-                                    <i class="icon-happy"></i>
-                                </div>
-                                <div class="fun-info">
-                                    <h1 class="timer" data-from="0" data-to="36" data-speed="1000"> </h1>
-                                    <span>CLIENTS handled</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="fun-factor">
-                                <div class="icon">
-                                    <i class="icon-flag"></i>
-                                </div>
-                                <div class="fun-info">
-                                    <h1 class="timer" data-from="0" data-to="29" data-speed="1000"> </h1>
-                                    <span>Project Completed</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="fun-factor">
-                                <div class="icon">
-                                    <i class="icon-ribbon"></i>
-                                </div>
-                                <div class="fun-info">
-                                    <h1 class="timer" data-from="0" data-to="17" data-speed="1000"> </h1>
-                                    <span>Design Award Won</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--fun factor-->
-
-
-
             <!--testimonial-->
             <div class="testimonial-parallax parallax-19">
                 <div class="page-content">
@@ -710,11 +666,11 @@
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/vendor/bootstrap-validator/validator.min.js"></script>
     <script src="assets/vendor/breakpoint/breakpoint.js"></script>
-    <!-- <script src="assets/vendor/count-to/jquery.countTo.js"></script>
+    <script src="assets/vendor/count-to/jquery.countTo.js"></script>
     <script src="assets/vendor/countdown/jquery.countdown.js"></script>
     <script src="assets/vendor/easing/jquery.easing.1.3.js"></script>
     <script src="assets/vendor/easy-pie-chart/jquery.easypiechart.min.js"></script>
-    <script src="assets/vendor/elasic-slider/jquery.eislideshow.js"></script> -->
+    <script src="assets/vendor/elasic-slider/jquery.eislideshow.js"></script>
     <script src="assets/vendor/flex-slider/jquery.flexslider-min.js"></script>
     <!-- <script src="assets/vendor/gmap/jquery.gmap.min.js"></script> -->
     <script src="assets/vendor/images-loaded/imagesloaded.js"></script>
@@ -727,10 +683,10 @@
     <script src="assets/vendor/parallax-js/parallax.min.js"></script>
     <script src="assets/vendor/smooth/smooth.js"></script>
     <script src="assets/vendor/sticky/jquery.sticky.min.js"></script>
-    <!-- <script src="assets/vendor/touchspin/touchspin.js"></script>
+    <script src="assets/vendor/touchspin/touchspin.js"></script>
     <script src="assets/vendor/typist/typist.js"></script>
     <script src="assets/vendor/visible/visible.js"></script>
-    <script src="assets/vendor/wow/wow.min.js"></script> -->
+    <script src="assets/vendor/wow/wow.min.js"></script>
     <script src="assets/js/scripts.js"></script>
     <!-- endinject -->
 </body>
